--- a/fixes/index.html
+++ b/fixes/index.html
@@ -152,6 +152,13 @@ title: Math, Sonification, Plots
                 animation-direction: normal;
         }
 
+        .pause_tracer {
+                -webkit-animation-play-state:paused;
+                -moz-animation-play-state:paused;
+                -o-animation-play-state:paused; 
+                animation-play-state:paused;
+        }
+
         .tracePlot {
                 width: 20px;
                 height: 20px;
