--- a/fixes/index.html
+++ b/fixes/index.html
@@ -216,8 +216,9 @@ title: Math, Sonification, Plots
         }
         */
         </style>
+
+
 </head>
-    /* ====== */
     <!-- img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast" -->
     <div><p>Click on Image to Toggle Between High Contrast <> Standard Contrast Settings for Image.</div></p>
 
@@ -235,7 +236,7 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
         <!-- div class="tracePlot"></div -->
-        <div id ="myAnimation"></div>
+        <!-- div id ="myAnimation"></div -->
         </div>
 
         <script>
