--- a/fixes/index.html
+++ b/fixes/index.html
@@ -142,7 +142,14 @@ title: Math, Sonification, Plots
                 //         animation: myOrbit 4s linear infinite; /* Chrome, Firefox 16+, 
                                                                 * IE 10+, Safari 5 */
 
-                
+                -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
+                -webkit-animation-duration: 10s;      /* Safari 4.0 - 8.0 */
+                -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
+                -webkit-animation-direction: normal;  /* Safari 4.0 - 8.0 */
+                animation-name: example;
+                animation-duration: 10s;
+                animation-iteration-count: 1;
+                animation-direction: normal;
         }
 
         .pause_tracer {
@@ -229,7 +236,7 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/line_neg.mp4"></audio>
         <!-- div class="tracePlot"></div -->
-        <!-- div id ="myAnimation"></div -->
+        <div id ="myAnimation"></div>
         </div>
 
         <script>
