--- a/fixes/index.html
+++ b/fixes/index.html
@@ -142,6 +142,11 @@ title: Math, Sonification, Plots
                 //         animation: myOrbit 4s linear infinite; /* Chrome, Firefox 16+, 
                                                                 * IE 10+, Safari 5 */
 
+                -webkit-animation-play-state:paused;
+                -moz-animation-play-state:paused;
+                -o-animation-play-state:paused; 
+                animation-play-state:paused;
+
                 -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
                 -webkit-animation-duration: 10s;      /* Safari 4.0 - 8.0 */
                 -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
