--- a/fixes/index.html
+++ b/fixes/index.html
@@ -239,9 +239,9 @@ title: Math, Sonification, Plots
                         // var audio = document.getElementById("audio");
                         // audio.volume = 0.4;
 
-                        audio.onended = function() {
-                                var elem = document.getElementById("myAnimation");
-                                elem.style.webkitAnimationPlayState = 'initial';
+                        audio.onended = function(elem) {
+                                // var elem = document.getElementById("myAnimation");
+                                elem.style.webkitAnimationPlayState = 'running';
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
                                 button.setAttribute("class", "button");
