--- a/fixes/index.html
+++ b/fixes/index.html
@@ -147,13 +147,13 @@ title: Math, Sonification, Plots
                 -o-animation-play-state:paused; 
                 animation-play-state:paused;
 
-                -webkit-animation-name: example;      /* Safari 4.0 - 8.0 */
-                -webkit-animation-duration: 5s;       /* Safari 4.0 - 8.0 */
-                -webkit-animation-iteration-count: 1; /* Safari 4.0 - 8.0 */
-                -webkit-animation-direction: normal;  /* Safari 4.0 - 8.0 */
+                -webkit-animation-name: example;             /* Safari 4.0 - 8.0 */
+                -webkit-animation-duration: 5s;              /* Safari 4.0 - 8.0 */
+                -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
+                -webkit-animation-direction: normal;         /* Safari 4.0 - 8.0 */
                 animation-name: example;
                 animation-duration: 5s;
-                animation-iteration-count: 1;
+                animation-iteration-count: infinite;
                 animation-direction: normal;
         }
 
@@ -240,7 +240,7 @@ title: Math, Sonification, Plots
                         // audio.volume = 0.4;
 
                         audio.onended = function() {
-                                elem.style.webkitAnimationPlayState = 'running';
+                                elem.style.webkitAnimationPlayState = 'initial';
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
                                 button.setAttribute("class", "button");
