--- a/fixes/index.html
+++ b/fixes/index.html
@@ -240,7 +240,8 @@ title: Math, Sonification, Plots
                         // audio.volume = 0.4;
 
                         audio.onended = function() {
-                                elem.style.webkitAnimationPlayState = 'inherit';
+                                elem.style.webkitAnimationPlayState = 'initial';
+                                elem.style.webkitAnimationPlayState = 'paused';
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
                                 button.setAttribute("class", "button");
