--- a/fixes/index.html
+++ b/fixes/index.html
@@ -242,8 +242,10 @@ title: Math, Sonification, Plots
                         audio.onended = function() {
                                 // elem.style.webkitAnimationPlayState = 'inherit';
                                 elem.style.webkitAnimationPlayState = 'paused';
-                                elem.style.top = '0px';
-                                elem.style.left = '0px';
+                                document.getElementById("myAnimation").style.top = "0px";
+                                document.getElementById("myAnimation").style.left = "0px";
+                                //elem.style.top = '0px';
+                                //elem.style.left = '0px';
                                 // button.innerHTML = "PLAY";
                                 button.removeAttribute("class");
                                 button.setAttribute("class", "button");
