--- a/fixes/index.html
+++ b/fixes/index.html
@@ -240,7 +240,7 @@ title: Math, Sonification, Plots
                         // audio.volume = 0.4;
 
                         audio.onended = function() {
-                                // elem.style.webkitAnimationPlayState = 'inherit';
+                                elem.style.webkitAnimationPlayState = 'initial';
                                 elem.style.webkitAnimationPlayState = 'paused';
                                 // document.getElementById("myAnimation").style.top = "0px";
                                 // document.getElementById("myAnimation").style.left = "0px";
@@ -255,6 +255,7 @@ title: Math, Sonification, Plots
                         };
                         if (!isPlaying) {
                                 audio.play();
+                                elem.style.webkitAnimationPlayState = 'initial';
                                 elem.style.position = 'absolute';
                                 elem.style.top = '0px';
                                 elem.style.left = '0px';
