--- a/fixes/index.html
+++ b/fixes/index.html
@@ -242,8 +242,8 @@ title: Math, Sonification, Plots
 
                         audio.onended = function() {
                                 // elem.style.webkitAnimationPlayState = 'inherit';
+                                // elem.style.webkitAnimationPlayState = 'initial';
                                 elem.style.webkitAnimationPlayState = 'paused';
-                                elem.style.webkitAnimationPlayState = 'initial';
                                 // document.getElementById("myAnimation").style.top = "0px";
                                 // document.getElementById("myAnimation").style.left = "0px";
                                 // elem.style.position = 'absolute';
