--- a/fixes/index.html
+++ b/fixes/index.html
@@ -246,7 +246,10 @@ title: Math, Sonification, Plots
                                 elem.style.webkitAnimationPlayState = 'paused';
                                 // document.getElementById("myAnimation").style.top = "0px";
                                 // document.getElementById("myAnimation").style.left = "0px";
-                                elem.style.position = 'relative';
+                                elem.style.position = 'absolute';
+                                // elem.style.top = '0px';
+                                // elem.style.left = '0px';
+                                // elem.style.position = 'relative';
                                 elem.style.top = '0%';
                                 elem.style.left = '0%';
 
