--- a/fixes/index.html
+++ b/fixes/index.html
@@ -235,7 +235,7 @@ title: Math, Sonification, Plots
                 function play(button) {
                         var elem = document.getElementById("myAnimation");
                         var audio_len = audio.duration;
-                        elem.style.webkitAnimationPlayState = audio.duration;
+                        elem.style.animation-duration = audio.duration;
                         // var pos = 75;
                         // var id = setInterval(frame, 10);
                         // var id = setTimeout(frame, 1000);
