--- a/fixes/index.html
+++ b/fixes/index.html
@@ -235,11 +235,10 @@ title: Math, Sonification, Plots
                 function play(button) {
                         var elem = document.getElementById("myAnimation");
                         var audio_len = audio.duration;
-                        elem.style["-webkit-animation-duration"] = audio.duration;
-                        elem.style["animation-duration"] = audio.duration;
-                        // var pos = 75;
-                        // var id = setInterval(frame, 10);
-                        // var id = setTimeout(frame, 1000);
+                        // elem.style["-webkit-animation-duration"] = audio.duration;
+                        // elem.style["animation-duration"] = audio.duration;
+                        elem.style["-webkit-animation-duration"] = 5s;
+                        elem.style["animation-duration"] = 5s;
                         // var audio = document.getElementById("audio");
                         // audio.volume = 0.4;
 
