--- a/fixes/index.html
+++ b/fixes/index.html
@@ -234,6 +234,9 @@ title: Math, Sonification, Plots
 
                 function play(button) {
                         var elem = document.getElementById("myAnimation");
+                        var audio = document.getElementById("audio");
+                        var audio_len = audio.duration;
+                        document.getElementById("myAnimation").style.animationDuration = "30s";
                         // var pos = 75;
                         // var id = setInterval(frame, 10);
                         // var id = setTimeout(frame, 1000);
