--- a/fixes/index.html
+++ b/fixes/index.html
@@ -236,10 +236,8 @@ title: Math, Sonification, Plots
                         var elem = document.getElementById("myAnimation");
                         var audio = document.getElementById("audio");
                         var audio_len = audio.duration;
-                        document.getElementById("myAnimation").style.animationDuration = audio.duration + "s";
-                        // var pos = 75;
-                        // var id = setInterval(frame, 10);
-                        // var id = setTimeout(frame, 1000);
+                        // document.getElementById("myAnimation").style.animationDuration = audio.duration + "s";
+                        elem.style.animationDuration = audio.duration + "s";
                         // var audio = document.getElementById("audio");
                         // audio.volume = 0.4;
 
